dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=blackcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=blackcoin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=blackcoin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=blackcoin-tx.1
endif

if BUILD_BITCOIN_UTIL
  dist_man1_MANS+=blackcoin-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=blackcoin-wallet.1
endif
endif
